--- a/catalog.html
+++ b/catalog.html
@@ -9,220 +9,226 @@
 </head>
 <body>
 <header class="header">
-  <nav>
-    <ul>
-      <li>
-        <a  href="index.html" class="nav-link">
-          <img src="img/logo-small.svg" alt="Барбершоп Бородинский" width="111" height="24">
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link">Информация</a>
-      </li>
-      <li>
-        <a href="#" class="nav-link">Новости</a>
-      </li>
-      <li>
-        <a href="#" class="nav-link">Прайс-лист</a>
-      </li>
-      <li>
-        <a href="catalog.html" class="nav-link">Магазин</a>
-      </li>
-      <li>
-        <a href="#" class="nav-link">Контакты</a>
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <button type="button" class="nav-link">Вход</button>
-      </li>
-    </ul>
-  </nav>
+  <div class="container">
+    <nav class="main-nav">
+      <ul class="nav-list">
+        <li>
+          <a  href="index.html" class="nav-link">
+            <img src="img/logo-small.svg" alt="Барбершоп Бородинский" width="111" height="24">
+          </a>
+        </li>
+        <li>
+          <a href="#" class="nav-link">Информация</a>
+        </li>
+        <li>
+          <a href="#" class="nav-link">Новости</a>
+        </li>
+        <li>
+          <a href="#" class="nav-link">Прайс-лист</a>
+        </li>
+        <li>
+          <a href="catalog.html" class="nav-link">Магазин</a>
+        </li>
+        <li>
+          <a href="#" class="nav-link">Контакты</a>
+        </li>
+      </ul>
+      <ul  class="nav-list">
+        <li>
+          <button type="button" class="nav-link">Вход</button>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </header>
 
 <main class="main">
-  <h1 class="visually-hidden">Барбершоп Бородинский: Магазин</h1>
-  <section class="catalog">
-    <h2 class="title">Средства для ухода</h2>
-    <ul class="breadcrumbs">
-      <li>
-        <a href="index.html">Главная</a>
-      </li>
-      <li>
-        <a href="catalog.html">Магазин</a>
-      </li>
-      <li>
-        <a>Средства для ухода</a>
-      </li>
-    </ul>
-
-    <section class="filter">
-      <h3 class="visually-hidden">Фильтр</h3>
-      <form method="post" action="https://echo.htmlacademy.ru">
-        <fieldset class="filter-field">
-          <legend>Производители:</legend>
-          <ul>
-            <li>
-              <label class="checkbox">
-                <input type="checkbox" name="manufacturer" value="Baxter of California" checked>
-                Baxter of California
-              </label>
-            </li>
-            <li>
-              <label class="checkbox">
-                <input type="checkbox" name="manufacturer" value="Mr Natty">
-                Mr Natty
-              </label>
-            </li>
-            <li>
-              <label class="checkbox">
-                <input type="checkbox" name="manufacturer" value="Suavecito" checked>
-                Suavecito
-              </label>
-            </li>
-            <li>
-              <label class="checkbox">
-                <input type="checkbox" name="manufacturer" value="Malin+Goetz">
-                Malin+Goetz
-              </label>
-            </li>
-            <li>
-              <label class="checkbox">
-                <input type="checkbox" name="manufacturer" value="Murray's">
-                Murray's
-              </label>
-            </li>
-            <li>
-              <label class="checkbox">
-                <input type="checkbox" name="manufacturer" value="American Crew" checked>
-                American Crew
-              </label>
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset class="filter-field">
-          <legend>Группы товаров:</legend>
-          <ul>
-            <li>
-              <label class="radio">
-                <input type="radio" name="goods-group" value="Бритвенные принадлежности">
-                Бритвенные принадлежности
-              </label>
-            </li>
-            <li>
-              <label class="radio">
-                <input type="radio" name="goods-group" value="Средства для ухода" checked>
-                Средства для ухода
-              </label>
-            </li>
-            <li>
-              <label class="radio">
-                <input type="radio" name="goods-group" value="Аксессуары">
-                Аксессуары
-              </label>
-            </li>
-          </ul>
-        </fieldset>
-
-        <button type="submit" class="button">Показать</button>
-      </form>
-    </section>
-
-    <section>
-      <h3 class="visually-hidden">Карточки товаров</h3>
-      <ul class="goods-cards">
+  <div class="container">
+    <div class="main-head">
+      <h1 class="visually-hidden">Барбершоп Бородинский: Магазин</h1>
+      <h2 class="title">Средства для ухода</h2>
+      <ul class="breadcrumbs">
         <li>
-          <article class="goods-card">
-            <a href="catalog-item.html">
-              <img src="img/1-shop.jpg" alt="Набор для путешествий «Baxter of California»" width="220" height="165">
-            </a>
-            <h4 class="card-title"><span class="good-type">Набор для путешествий</span> «Baxter of California»</h4>
-            <div class="price">
-              <p>2900 ₽</p>
-              <button type="button" class="button">Купить</button>
-            </div>
-          </article>
+          <a href="index.html">Главная</a>
         </li>
         <li>
-          <article class="goods-card">
-            <a href="#">
-              <img src="img/2-shop.jpg" alt="Увлажняющий кондиционер «Baxter of California»" width="220" height="165">
-            </a>
-            <h4 class="card-title"><span class="good-type">Увлажняющий кондиционер</span> «Baxter of California»</h4>
-            <div class="price">
-              <p>750 ₽</p>
-              <button type="button" class="button">Купить</button>
-            </div>
-          </article>
+          <a href="catalog.html">Магазин</a>
         </li>
         <li>
-          <article class="goods-card">
-            <a href="#">
-              <img src="img/3-shop.jpg" alt="Гель для волос «SUAVECITO»" width="220" height="165">
-            </a>
-            <h4 class="card-title"><span class="good-type">Гель для волос</span> «SUAVECITO»</h4>
-            <div class="price">
-              <p>290 ₽</p>
-              <button type="button" class="button">Купить</button>
-            </div>
-          </article>
-        </li>
-        <li>
-          <article class="goods-card">
-            <a href="#">
-              <img src="img/4-shop.jpg" alt="Глина для укладки волос «American crew»" width="220" height="165">
-            </a>
-            <h4 class="card-title"><span class="good-type">Глина для укладки волос</span> «American crew»</h4>
-            <div class="price">
-              <p>500 ₽</p>
-              <button type="button" class="button">Купить</button>
-            </div>
-          </article>
-        </li>
-        <li>
-          <article class="goods-card">
-            <a href="#">
-              <img src="img/5-shop.jpg" alt="Гель для волос«AMERICAN CREW»">
-            </a>
-            <h4 class="card-title"><span class="good-type">Гель для волос</span> «AMERICAN CREW»</h4>
-            <div class="price">
-              <p>300 ₽</p>
-              <button type="button" class="button">Купить</button>
-            </div>
-          </article>
-        </li>
-        <li>
-          <article class="goods-card">
-            <a href="#">
-              <img src="img/6-shop.jpg" alt="Набор для бритья«Baxter of California»" width="220" height="165">
-            </a>
-            <h4 class="card-title"><span class="good-type">Набор для бритья</span> «Baxter of California»</h4>
-            <div class="price">
-              <p>3900 ₽</p>
-              <button type="button" class="button">Купить</button>
-            </div>
-          </article>
+          <a>Средства для ухода</a>
         </li>
       </ul>
+    </div>
+    <section class="main-body">
+      <section class="filter">
+        <h3 class="visually-hidden">Фильтр</h3>
+        <form method="post" action="https://echo.htmlacademy.ru">
+          <fieldset class="filter-field">
+            <legend>Производители:</legend>
+            <ul>
+              <li>
+                <label class="checkbox">
+                  <input type="checkbox" name="manufacturer" value="Baxter of California" checked>
+                  Baxter of California
+                </label>
+              </li>
+              <li>
+                <label class="checkbox">
+                  <input type="checkbox" name="manufacturer" value="Mr Natty">
+                  Mr Natty
+                </label>
+              </li>
+              <li>
+                <label class="checkbox">
+                  <input type="checkbox" name="manufacturer" value="Suavecito" checked>
+                  Suavecito
+                </label>
+              </li>
+              <li>
+                <label class="checkbox">
+                  <input type="checkbox" name="manufacturer" value="Malin+Goetz">
+                  Malin+Goetz
+                </label>
+              </li>
+              <li>
+                <label class="checkbox">
+                  <input type="checkbox" name="manufacturer" value="Murray's">
+                  Murray's
+                </label>
+              </li>
+              <li>
+                <label class="checkbox">
+                  <input type="checkbox" name="manufacturer" value="American Crew" checked>
+                  American Crew
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="filter-field">
+            <legend>Группы товаров:</legend>
+            <ul>
+              <li>
+                <label class="radio">
+                  <input type="radio" name="goods-group" value="Бритвенные принадлежности">
+                  Бритвенные принадлежности
+                </label>
+              </li>
+              <li>
+                <label class="radio">
+                  <input type="radio" name="goods-group" value="Средства для ухода" checked>
+                  Средства для ухода
+                </label>
+              </li>
+              <li>
+                <label class="radio">
+                  <input type="radio" name="goods-group" value="Аксессуары">
+                  Аксессуары
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <button type="submit" class="button">Показать</button>
+        </form>
+      </section>
+
+      <section class="goods">
+        <h3 class="visually-hidden">Карточки товаров</h3>
+        <ul class="goods-cards">
+          <li>
+            <article class="goods-card">
+              <a href="catalog-item.html">
+                <img src="img/1-shop.jpg" alt="Набор для путешествий «Baxter of California»" width="220" height="165">
+              </a>
+              <h4 class="card-title"><span class="good-type">Набор для путешествий</span> «Baxter of California»</h4>
+              <div class="price">
+                <p>2900 ₽</p>
+                <button type="button" class="button">Купить</button>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="goods-card">
+              <a href="#">
+                <img src="img/2-shop.jpg" alt="Увлажняющий кондиционер «Baxter of California»" width="220" height="165">
+              </a>
+              <h4 class="card-title"><span class="good-type">Увлажняющий кондиционер</span> «Baxter of California»</h4>
+              <div class="price">
+                <p>750 ₽</p>
+                <button type="button" class="button">Купить</button>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="goods-card">
+              <a href="#">
+                <img src="img/3-shop.jpg" alt="Гель для волос «SUAVECITO»" width="220" height="165">
+              </a>
+              <h4 class="card-title"><span class="good-type">Гель для волос</span> «SUAVECITO»</h4>
+              <div class="price">
+                <p>290 ₽</p>
+                <button type="button" class="button">Купить</button>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="goods-card">
+              <a href="#">
+                <img src="img/4-shop.jpg" alt="Глина для укладки волос «American crew»" width="220" height="165">
+              </a>
+              <h4 class="card-title"><span class="good-type">Глина для укладки волос</span> «American crew»</h4>
+              <div class="price">
+                <p>500 ₽</p>
+                <button type="button" class="button">Купить</button>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="goods-card">
+              <a href="#">
+                <img src="img/5-shop.jpg" alt="Гель для волос«AMERICAN CREW»">
+              </a>
+              <h4 class="card-title"><span class="good-type">Гель для волос</span> «AMERICAN CREW»</h4>
+              <div class="price">
+                <p>300 ₽</p>
+                <button type="button" class="button">Купить</button>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="goods-card">
+              <a href="#">
+                <img src="img/6-shop.jpg" alt="Набор для бритья«Baxter of California»" width="220" height="165">
+              </a>
+              <h4 class="card-title"><span class="good-type">Набор для бритья</span> «Baxter of California»</h4>
+              <div class="price">
+                <p>3900 ₽</p>
+                <button type="button" class="button">Купить</button>
+              </div>
+            </article>
+          </li>
+        </ul>
+
+        <ul class="pagination">
+          <li>
+            <a href="#">1</a>
+          </li>
+          <li>
+            <a>2</a>
+          </li>
+          <li>
+            <a href="#">3</a>
+          </li>
+          <li>
+            <a href="#">4</a>
+          </li>
+        </ul>
+      </section>
     </section>
-    <ul class="pagination">
-      <li>
-        <a href="#">1</a>
-      </li>
-      <li>
-        <a>2</a>
-      </li>
-      <li>
-        <a href="#">3</a>
-      </li>
-      <li>
-        <a href="#">4</a>
-      </li>
-    </ul>
-  </section>
+  </div>
 </main>
 
-<aside class="modal">
+<aside class="modal" hidden>
   <h2 class="visually-hidden">Форма входа</h2>
   <p class="title">Личный кабинет</p>
   <p class="paragraph">Введите, пожалуйста, свой логин и пароль</p>
@@ -247,32 +253,36 @@
 </aside>
 
 <footer class="footer">
-  <article>
-    <h2 class="visually-hidden">Контакты</h2>
-    <p>
-      БАРБЕРШОП «БОРОДИНСКИЙ»<br>
-      АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
-      <span class="underline">КАК НАС НАЙТИ?</span><br>
-      ТЕЛЕФОН: +7 (495) 666-02-66
-    </p>
-  </article>
-  <div>
-    <p>Давайте дружить!</p>
-    <ul class="social">
-      <li>
-        <a href="#" class="button button-vk">Барбершоп Бородинский в ВК</a>
-      </li>
-      <li>
-        <a href="#" class="button button-fb">Барбершоп Бородинский в Facebook</a>
-      </li>
-      <li>
-        <a href="#" class="button button-instagram">Барбершоп Бородинский в Instagram</a>
-      </li>
-    </ul>
-  </div>
-  <div>
-    <p>Разработано:</p>
-    <a href="https://htmlacademy.ru/" class="button">HTML Academy</a>
+  <div class="container">
+    <div class="footer-inner">
+      <article class="footer-contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <p>
+          БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+          АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+          <a>КАК НАС НАЙТИ?</a><br>
+          ТЕЛЕФОН: +7 (495) 666-02-66
+        </p>
+      </article>
+      <div>
+        <p>Давайте дружить!</p>
+        <ul class="social">
+          <li>
+            <a href="#" class="button button-vk">Барбершоп Бородинский в ВК</a>
+          </li>
+          <li>
+            <a href="#" class="button button-fb">Барбершоп Бородинский в Facebook</a>
+          </li>
+          <li>
+            <a href="#" class="button button-instagram">Барбершоп Бородинский в Instagram</a>
+          </li>
+        </ul>
+      </div>
+      <div class="copyright">
+        <p>Разработано:</p>
+        <a href="https://htmlacademy.ru/" class="button">HTML Academy</a>
+      </div>
+    </div>
   </div>
 </footer>
 </body>
