--- a/catalog-item.html
+++ b/catalog-item.html
@@ -9,131 +9,143 @@
 </head>
 <body>
 <header class="header">
-  <nav>
-    <ul>
-      <li>
-        <a  href="index.html" class="nav-link">
-          <img src="img/logo-small.svg" alt="Барбершоп Бородинский" width="111" height="24">
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link">Информация</a>
-      </li>
-      <li>
-        <a href="#" class="nav-link">Новости</a>
-      </li>
-      <li>
-        <a href="#" class="nav-link">Прайс-лист</a>
-      </li>
-      <li>
-        <a href="catalog.html" class="nav-link">Магазин</a>
-      </li>
-      <li>
-        <a href="#" class="nav-link">Контакты</a>
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <button type="button" class="nav-link">Вход</button>
-      </li>
-    </ul>
-  </nav>
+  <div class="container">
+    <nav class="main-nav">
+      <ul class="nav-list">
+        <li>
+          <a  href="index.html" class="nav-link">
+            <img src="img/logo-small.svg" alt="Барбершоп Бородинский" width="111" height="24">
+          </a>
+        </li>
+        <li>
+          <a href="#" class="nav-link">Информация</a>
+        </li>
+        <li>
+          <a href="#" class="nav-link">Новости</a>
+        </li>
+        <li>
+          <a href="#" class="nav-link">Прайс-лист</a>
+        </li>
+        <li>
+          <a href="catalog.html" class="nav-link">Магазин</a>
+        </li>
+        <li>
+          <a href="#" class="nav-link">Контакты</a>
+        </li>
+      </ul>
+      <ul  class="nav-list">
+        <li>
+          <button type="button" class="nav-link">Вход</button>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </header>
 
 <main class="main">
-  <h1 class="title">Набор для путешествий «Baxter of California»</h1>
-  <ul class="breadcrumbs">
-    <li>
-      <a href="index.html">Главная</a>
-    </li>
-    <li>
-      <a href="catalog.html">Магазин</a>
-    </li>
-    <li>
-      <a href="catalog.html">Средства для ухода</a>
-    </li>
-    <li>
-      <a>Набор для путешествий «Baxter of California»</a>
-    </li>
-  </ul>
-
-  <section class="gallery">
-    <h2 class="visually-hidden">Галерея</h2>
-    <figure>
-      <img src="img/3-item.jpg" alt="Набор для путешествий «Baxter of California»" width="461" height="499">
-    </figure>
-    <ul>
-      <li>
-        <img src="img/1-item.jpg" alt="Набор для путешествий «Baxter of California»" width="140" height="149">
-      </li>
-      <li>
-        <img src="img/2-item.jpg" alt="Набор для путешествий «Baxter of California»" width="140" height="149">
-      </li>
-      <li>
-        <img src="img/3-item.jpg" alt="Набор для путешествий «Baxter of California»" width="140" height="149">
-      </li>
-    </ul>
-  </section>
-
-  <section>
-    <h2 class="visually-hidden">Информация о товаре</h2>
-    <section>
-      <h3 class="visually-hidden">Описание товара</h3>
-      <p>
-        <span>Есть в наличии</span>
-        <span class="vendor-code">Артикул: dexter-ae</span>
-      </p>
-      <p>
-        Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все,
-        что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания,
-        увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
-      </p>
-      <div class="price">
-        <p>2900 ₽</p>
-        <button type="button" class="button">Купить</button>
-      </div>
-    </section>
-    <section>
-      <h3 class="visually-hidden">Состав</h3>
-      <p>В набор входят:</p>
-      <ul class="consist">
-        <li>Средство для умывания (50 мл)</li>
-        <li>Увлажняющий крем (50 мл)</li>
-        <li>Крем для бритья (50 мл)</li>
-        <li>Крем после бритья, шампунь (50 мл)</li>
-        <li>Удобная кожаная косметичка</li>
+  <div class="container">
+    <div class="main-head">
+      <h1 class="title">Набор для путешествий «Baxter of California»</h1>
+      <ul class="breadcrumbs">
+        <li>
+          <a href="index.html">Главная</a>
+        </li>
+        <li>
+          <a href="catalog.html">Магазин</a>
+        </li>
+        <li>
+          <a href="catalog.html">Средства для ухода</a>
+        </li>
+        <li>
+          <a>Набор для путешествий «Baxter of California»</a>
+        </li>
       </ul>
-    </section>
-  </section>
+    </div>
+
+    <div class="main-body">
+      <section class="gallery">
+        <h2 class="visually-hidden">Галерея</h2>
+        <figure>
+          <img src="img/3-item.jpg" alt="Набор для путешествий «Baxter of California»" width="461" height="499">
+        </figure>
+        <ul class="small-pictures">
+          <li>
+            <img src="img/1-item.jpg" alt="Набор для путешествий «Baxter of California»" width="140" height="149">
+          </li>
+          <li>
+            <img src="img/2-item.jpg" alt="Набор для путешествий «Baxter of California»" width="140" height="149">
+          </li>
+          <li>
+            <img src="img/3-item.jpg" alt="Набор для путешествий «Baxter of California»" width="140" height="149">
+          </li>
+        </ul>
+      </section>
+
+      <section class="info-good">
+        <h2 class="visually-hidden">Информация о товаре</h2>
+        <section>
+          <h3 class="visually-hidden">Описание товара</h3>
+          <p>
+            <span>Есть в наличии</span>
+            <span class="vendor-code">Артикул: dexter-ae</span>
+          </p>
+          <p>
+            Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все,
+            что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания,
+            увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
+          </p>
+          <div class="price">
+            <p>2900 ₽</p>
+            <button type="button" class="button">Купить</button>
+          </div>
+        </section>
+        <section>
+          <h3 class="visually-hidden">Состав</h3>
+          <p>В набор входят:</p>
+          <ul class="consist">
+            <li>Средство для умывания (50 мл)</li>
+            <li>Увлажняющий крем (50 мл)</li>
+            <li>Крем для бритья (50 мл)</li>
+            <li>Крем после бритья, шампунь (50 мл)</li>
+            <li>Удобная кожаная косметичка</li>
+          </ul>
+        </section>
+      </section>
+    </div>
+  </div>
 </main>
 
 <footer class="footer">
-  <article>
-    <h2 class="visually-hidden">Контакты</h2>
-    <p>
-      БАРБЕРШОП «БОРОДИНСКИЙ»<br>
-      АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
-      <span class="underline">КАК НАС НАЙТИ?</span><br>
-      ТЕЛЕФОН: +7 (495) 666-02-66
-    </p>
-  </article>
-  <div>
-    <p>Давайте дружить!</p>
-    <ul class="social">
-      <li>
-        <a href="#" class="button button-vk">Барбершоп Бородинский в ВК</a>
-      </li>
-      <li>
-        <a href="#" class="button button-fb">Барбершоп Бородинский в Facebook</a>
-      </li>
-      <li>
-        <a href="#" class="button button-instagram">Барбершоп Бородинский в Instagram</a>
-      </li>
-    </ul>
-  </div>
-  <div>
-    <p>Разработано:</p>
-    <a href="https://htmlacademy.ru/" class="button">HTML Academy</a>
+  <div class="container">
+    <div class="footer-inner">
+      <article class="footer-contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <p>
+          БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+          АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+          <a>КАК НАС НАЙТИ?</a><br>
+          ТЕЛЕФОН: +7 (495) 666-02-66
+        </p>
+      </article>
+      <div>
+        <p>Давайте дружить!</p>
+        <ul class="social">
+          <li>
+            <a href="#" class="button button-vk">Барбершоп Бородинский в ВК</a>
+          </li>
+          <li>
+            <a href="#" class="button button-fb">Барбершоп Бородинский в Facebook</a>
+          </li>
+          <li>
+            <a href="#" class="button button-instagram">Барбершоп Бородинский в Instagram</a>
+          </li>
+        </ul>
+      </div>
+      <div class="copyright">
+        <p>Разработано:</p>
+        <a href="https://htmlacademy.ru/" class="button">HTML Academy</a>
+      </div>
+    </div>
   </div>
 </footer>
 
